--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -112,6 +112,7 @@
     "tr-utilities": "ユーティリティ",
     "tr-usb-storage": "USBストレージ対応",
     "tr-file-sharing": "ファイル共有",
+    "tr-ad-blocking": "広告ブロック",
     
     "tr-dnsmasq-settings": "DNS サーバー最適化",
     "tr-dnsmasq-mode": "DNS サーバーモード",
