--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -113,6 +113,7 @@
     "tr-usb-storage": "USB Storage Support",
     "tr-file-sharing": "File Sharing",
     "tr-ad-blocking": "Ad Blocking",
+    "tr-dns-privacy": "dns-privacy",
     
     "tr-dnsmasq-settings": "DNS Server Optimization",
     "tr-dnsmasq-mode": "DNS Server Mode",
