--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -113,6 +113,7 @@
     "tr-usb-storage": "USBストレージ対応",
     "tr-file-sharing": "ファイル共有",
     "tr-ad-blocking": "広告ブロック",
+    "tr-dns-privacy": "DNSプライバシー",
     
     "tr-dnsmasq-settings": "DNS サーバー最適化",
     "tr-dnsmasq-mode": "DNS サーバーモード",
