--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -65,7 +65,7 @@
     "tr-dslite-aftr-ipv6-address": "AFTRアドレス",
     "tr-dslite-notice1": "注: 本当の値とは違う場合があります。",
 
-    "tr-mape-type": "MAP-E設定",
+    "tr-mape-type": "アドレスタイプ",
     "tr-br": "ピアアドレス (BR)",
     "tr-ea-len": "EA長",
     "tr-ipv4-prefix": "IPv4アドレス",
