--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -65,7 +65,7 @@
     "tr-dslite-aftr-ipv6-address": "AFTR Address",
     "tr-dslite-notice1": "Note: Actual values may differ.",
 
-    "tr-mape-type": "MAP-E Settings",
+    "tr-mape-type": "Address Type",
     "tr-br": "Peer Address (BR)",
     "tr-ea-len": "EA Length",
     "tr-ipv4-prefix": "IPv4 Address",
