--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -1,8 +1,8 @@
 {
     "tr-custom-packages": "インストールされたパッケージ",
     "tr-custom-defaults": "初回起動時に実行されるスクリプト (uci-defaults)",
-    "tr-postinst": "Postinst（パッケージインストールスクリプト）",
-    "tr-uci": "UCI-defaults（ブート設定スクリプト）",
+    "tr-postinst": "Postinst(パッケージインストールスクリプト)",
+    "tr-uci": "UCI-defaults(ブート設定スクリプト)",
     "tr-package-search": "パッケージ検索",
     "tr-add-commands": "コマンド追加",
     "tr-base-size": "ベース",
@@ -98,7 +98,7 @@
     "tr-network-device-backlog": "ネットワークデバイスバックログ",
     "tr-socket-max-connections": "ソケット最大接続数",
     "tr-tcp-congestion-control": "TCP輻輳制御",
-    "tr-cubic-default": "cubic（デフォルト）",
+    "tr-cubic-default": "cubic(デフォルト)",
     "tr-bbr": "BBR",
     "tr-reno": "Reno",
     "tr-disabled-mode": "無効モード",
@@ -116,8 +116,7 @@
     "tr-utilities": "ユーティリティ",
     "tr-usb-storage": "USBストレージ対応",
     "tr-file-sharing": "ファイル共有",
-    "tr-ad-blocking": "広告ブロック",
-    "tr-dns-privacy": "DNSプライバシー",
+    "tr-dns-privacy": "DNS & プライバシー",
     
     "tr-dnsmasq-settings": "DNS サーバー最適化",
     "tr-dnsmasq-mode": "DNS サーバーモード",
