--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -12,6 +12,9 @@
     "tr-package-size-note": "Note: Language and dependency packages are not included",
     "tr-uci-size-limit": "Note: File size limit: 20480 bytes: 20.00 KB",
     
+    "tr-import-settings": "Import",
+    "tr-export-settings": "Export",
+    
     "tr-extended-info": "Region and ISP Information",
     "tr-loading": "Loading...",
     "tr-notice": "Notice",
